# SE306-ROS

./: .gitignore  .gitignore~  .rosinstall  LICENSE  README.md  setup.bash  setup.sh  setup.zsh
elderly_care_simulation/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml
elderly_care_simulation/include/: Assistant.h  DiceRollerTypeConstants.h  EscortRobot.h  EventTriggerUtility.h  GuiCommConstants.h  MoralSupportDiceRoller.h  PerformTaskConstants.h  Poi.h  RelativeRobot.h  Robot.h  Scheduler.h  StaticPoi.h  StaticPoiConstants.h  VeryIllDiceRoller.h
elderly_care_simulation/launch/: default.launch  maze.launch
elderly_care_simulation/msg/: DiceRollReport.msg  DiceRollTrigger.msg  EventTrigger.msg  GuiComm.msg  Task.msg
elderly_care_simulation/scripts/: ControlPanel.py  DiceRollListener.py  EventTriggerUtility.py  PathServer.py  build.sh  install_dependencies.sh  maze_run.sh  run.sh  test.sh  tests_build.sh  tests_run.sh
elderly_care_simulation/src/: Assistant.cpp  Assistant.h  Caregiver.cpp  Caregiver.h  ChefRobot.cpp  ChefRobot.h  Companionship.cpp  Companionship.h  CompanionshipRobot.cpp  CompanionshipRobot.h  DiceRollListener.py  DiceRoller.cpp  DiceRoller.h  DiceRollerTypeConstants.h  DoctorRobot.cpp  Entertainment.cpp  Entertainment.h  EntertainmentAssistant.cpp  EntertainmentAssistant.cpp~  EntertainmentDiceRoller.cpp  EntertainmentDiceRoller.h  EntertainmentRobot.cpp  EntertainmentRobot.h  EscortRobot.cpp  EscortRobot.h  EventNode.h  EventTriggerConstants.h  EventTriggerUtility.h  FeedingRobot.cpp  FeedingRobot.h  Friend.cpp  Friend.h  FriendRobot.cpp  FriendRobot.h  GuiCommConstants.h  IllDiceRoller.cpp  IllDiceRoller.h  MedicationRobot.cpp  MedicationRobot.h  MoralSupportDiceRoller.cpp  (+28 more)
elderly_care_simulation/src/elderly_care_simulation/msg/: _DiceRollTrigger.py  _EventTrigger.py  _Task.py  __init__.py
elderly_care_simulation/src/test/: TestCaregiverRobot.cpp  TestChefRobot.cpp  TestCompanionshipRobot.cpp  TestDoctorRobot.cpp  TestEntertainmentRobot.cpp  TestEscortRobot.cpp  TestFriendRobot.cpp  TestMedicationRobot.cpp  TestPathServer.cpp  TestRelativeRobot.cpp  TestResident.cpp  TestScheduler.cpp
elderly_care_simulation/srv/: FindPath.srv  PerformTask.srv  task_request.srv
elderly_care_simulation/test/: TestAssistant.cpp  TestCaregiverRobot.test  TestChefRobot.test  TestCompanionshipRobot.test  TestDiceRoller.cpp  TestDoctorRobot.test  TestEntertainmentRobot.test  TestEscortRobot.test  TestFriendRobot.test  TestMedicationRobot.test  TestPathServer.test  TestRelativeRobot.test  TestResident.test  TestScheduler.test
presentations/: g1_alpha_slides.pptx  g1_final_slides.pptx  g1_presentation_01.pptx  g1_presentation_02.pptx  g1_presentation_03.pptx  g1_presentation_04.pptx
project-documentation/: UML Diagram.html
project-plan/: SOFTENG-306-Project-Plan.mpp
world/: alpha-house.pgm  alpha-house.yaml  floor.pgm  house-navigation.pgm  house.pgm  maze-navigation.pgm  maze.pgm  maze.world  swarm_world.pgm  testworld.world  world.world  world.world~
world/bitmaps/: alpha-hallway.pgm  space.pgm
world/include/: alphabet.inc  appliances.inc  caregiverRobot.inc  chefRobot.inc  companionship.inc  companionshipRobot.inc  doctorRobot.inc  entertainment.inc  entertainmentRobot.inc  feedingRobot.inc  floor.inc  floorplan.inc  friendRobot.inc  furniture.inc  hospital.inc  medicationRobot.inc  nurseRobot.inc  relativeRobot.inc  resident.inc  robot.inc
